--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,41 +2,43 @@
 @tailwind components;
 @tailwind utilities;
 
+.bg-fundo-nav {
+  background-color: #1c1c1c;
+}
+
 
 #foto-arredondada {
   border-radius: 74% 26% 53% 47% / 39% 42% 58% 61%;
-  animation: mudar 10s ease-in-out infinite;
+  animation: mudar 8s ease-in-out infinite;
 }
-
 
 @keyframes mudar {
-    0% {
-        border-radius: 74% 26% 53% 47% / 39% 42% 58% 61%;
-    }
-    20% {
-        border-radius: 33% 67% 53% 47% / 39% 42% 58% 61% ;
-    }
-    40% {
-        border-radius: 33% 67% 81% 19% / 39% 69% 31% 61% ;
-    }
-    60% {
-        border-radius: 93% 7% 69% 31% / 33% 65% 35% 67% ;
-    }
-    80% {
-        border-radius: 37% 63% 69% 31% / 44% 77% 23% 56% ;
-    }
-    100% {
-        border-radius: 74% 26% 53% 47% / 39% 42% 58% 61%;
-    }
+  0% {
+    border-radius: 74% 26% 53% 47% / 39% 42% 58% 61%;
+  }
+  20% {
+    border-radius: 33% 67% 53% 47% / 39% 42% 58% 61%;
+  }
+  40% {
+    border-radius: 33% 67% 81% 19% / 39% 69% 31% 61%;
+  }
+  60% {
+    border-radius: 93% 7% 69% 31% / 33% 65% 35% 67%;
+  }
+  80% {
+    border-radius: 37% 63% 69% 31% / 44% 77% 23% 56%;
+  }
+  100% {
+    border-radius: 74% 26% 53% 47% / 39% 42% 58% 61%;
+  }
 }
-
 
 #layout-principal {
   width: 100%;
   height: 100%;
   position: absolute;
   animation: moveBackground 10s ease-in-out infinite;
-  background-image: linear-gradient(-45deg, #040335, #07002a, #070855);
+  background-image: linear-gradient(-45deg, #000000, #07002a, #000000);
   background-size: 200% 200%;
 }
 
