--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,7 +38,7 @@
   height: 100%;
   position: absolute;
   animation: moveBackground 10s ease-in-out infinite;
-  background-image: linear-gradient(-45deg, #000000, #07002a, #000000);
+  background-image: linear-gradient(-45deg, #100f0f, #070411, #000000);
   background-size: 200% 200%;
 }
 
