--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@
 }
 
 
-#foto-arredondada {
+.image-move-efect{
   border-radius: 74% 26% 53% 47% / 39% 42% 58% 61%;
   animation: mudar 8s ease-in-out infinite;
 }
@@ -56,4 +56,9 @@
   75% {
     background-position: 0% 100%;
   }
+}
+
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
 }
