--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -60,6 +60,30 @@
 .no-scrollbar::-webkit-scrollbar {
   display: none;
 }
-.bg-mavi {
-  background: #f8a5c1;
+
+
+@keyframes heartbeat {
+  0% {
+    transform: scale(0.75);
+  }
+  20% {
+    transform: scale(1);
+  }
+  40% {
+    transform: scale(0.75);
+  }
+  60% {
+    transform: scale(1);
+  }
+  80% {
+    transform: scale(0.75);
+  }
+  100% {
+    transform: scale(0.75);
+  }
+}
+
+.heart {
+  animation: heartbeat 1s infinite;
+  display: inline-block;
 }
